--- a/FRONTEND/css/landing-page.css
+++ b/FRONTEND/css/landing-page.css
@@ -163,8 +163,22 @@ h6 {
 footer {
     padding: 50px 0;
     background-color: #f8f8f8;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:130px;   /* Height of the footer */
 }
 
 p.copyright {
     margin: 15px 0 0;
+}
+
+.btn-delete{
+ color: red;
+    
+}
+
+.btn-submit{
+    color:green;
+}
 }
