--- a/FRONTEND/css/landing-page.css
+++ b/FRONTEND/css/landing-page.css
@@ -163,10 +163,6 @@ h6 {
 footer {
     padding: 50px 0;
     background-color: #f8f8f8;
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:130px;   /* Height of the footer */
 }
 
 p.copyright {
@@ -181,4 +177,10 @@ p.copyright {
 .btn-submit{
     color:green;
 }
+
+.list-wrapper{
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 150px;
 }
+
